--- a/src/order/src/main/resources/application.yml
+++ b/src/order/src/main/resources/application.yml
@@ -9,11 +9,16 @@ spring:
       host: localhost
       port: 8500
       discovery:
-        enabled: true
+        healthCheckPath: /actuator/health
+        instanceId: order:${spring.application.instance-id:${random.value}}
         service-name: ecommerce-order
-        health-check-path: /actuator/health
-        health-check-interval: 10s
-
+        prefer-ip-address: true
+        tags:
+          - profile=${spring.profiles.active}
+          - version=#project.version#
+          - git-version=${git.commit.id.describe:}
+          - git-commit=${git.commit.id.abbrev:}
+          - git-branch=${git.branch:}
 
 server:
   port: 8083
