--- a/src/product/pom.xml
+++ b/src/product/pom.xml
@@ -33,6 +33,7 @@
 		<springdoc.version>2.6.0</springdoc.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+		<projectlombok-lombok.version>1.18.30</projectlombok-lombok.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -57,7 +58,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>${projectlombok-lombok.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
